--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.5"
   }
 }
